--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=https://sites.google.com/view/countryinnsnewforest/home">
     <title>Redirecting...</title>
