--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- You can add icons here -->
 </head>
 <body>
-    <h1>Welcome to Country Inns New Forest</h1>
-    <p>Stay updated with our events, offers, and more. This is the PWA for our 7 pubs in the New Forest.</p>
+    <h1>Welcome to Country Inns App</h1>
+    <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
     <p>If you are not redirected, <a href="https://sites.google.com/view/countryinnsnewforest/home">click here</a>.</p>
     <script>
       if ('serviceWorker' in navigator) {
