--- a/index.html
+++ b/index.html
@@ -18,5 +18,12 @@
           .catch((err) => console.log('Service Worker Registration Failed:', err));
       }
     </script>
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('Service Worker registered!', reg))
+      .catch(err => console.log('Service Worker registration failed:', err));
+  }
+</script>
+
 </body>
 </html>
