--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
     <p>If you are not redirected, <a href="https://sites.google.com/view/countryinnsnewforest/home">click here</a>.</p>
     <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/pwabuilder-sw.js')
-          .then((reg) => console.log('Service Worker Registered:', reg))
-          .catch((err) => console.log('Service Worker Registration Failed:', err));
-      }
-    </script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(() => console.log('Service Worker Registered'));
+  }
+</script>
 if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/service-worker.js')
       .then(reg => console.log('Service Worker registered!', reg))
