--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <p>If you are not redirected, <a href="https://countryinns.github.io/countryinns-pwa/">click here</a>.</p>
     <script>
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
-      .then(() => console.log('Service Worker Registered'));
-  }
+  navigator.serviceWorker.register('/countryinns-pwa/service-worker.js')
+    .then((reg) => console.log('Service Worker registered:', reg))
+    .catch((err) => console.error('Service Worker registration failed:', err));
+}
 </script>
 </body>
 </html>
