--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Inns App</title>
+    <link rel="icon" href="data:,">
     <link rel="manifest" href="/countryinns-pwa/manifest.json">
     <link rel="icon" href="/countryinns-pwa/icon-192x192.png" type="image/png">
 </head>
