--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 <body>
     <h1>Welcome to Country Inns App</h1>
     <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
+    <p>If you are not redirected, <a href="https://sites.google.com/view/countryinnsnewforest/home">click here</a>.</p>
 
     <script>
-        // Automatically redirect after 2 seconds
-        setTimeout(function() {
-            window.location.href = "https://countryinns.github.io/countryinns-pwa/";
-        }, 2000);
+        // Automatically redirect after a short delay
+        setTimeout(() => {
+            window.location.href = "https://sites.google.com/view/countryinnsnewforest/home";
+        }, 1500); // 1.5 seconds delay
     </script>
-
-    <p>If you are not redirected, <a href="https://countryinns.github.io/countryinns-pwa/">click here</a>.</p>
 </body>
 </html>
