--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Inns App</title>
 
+    <!-- Open Graph tags for Facebook -->
+    <meta property="og:title" content="Country Inns App" />
+    <meta property="og:description" content="Explore all 7 pubs, view menus, book tables, and stay updated on events — all in one place!" />
+    <meta property="og:url" content="https://countryinns.github.io/countryinns-pwa/" />
+    <meta property="og:image" content="https://github.com/countryinns/countryinns-pwa/blob/main/icon-512x512.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Country Inns" />
+    <meta property="og:locale" content="en_GB" />
+
     <!-- Link to the manifest.json file -->
     <link rel="manifest" href="manifest.json">
     
