--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Country Inns App" />
     <meta property="og:description" content="Explore all 7 pubs, view menus, book tables, and stay updated on events — all in one place!" />
     <meta property="og:url" content="https://countryinns.github.io/countryinns-pwa/" />
-    <meta property="og:image" content="https://github.com/countryinns/countryinns-pwa/blob/main/icon-512x512.png" />
+    <meta property="og:image" content="https://countryinns.github.io/countryinns-pwa/preview-image.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Country Inns" />
     <meta property="og:locale" content="en_GB" />
