--- a/index.html
+++ b/index.html
@@ -21,20 +21,95 @@
     <!-- Set theme color for the address bar on mobile -->
     <meta name="theme-color" content="#000000">
     
-    <!-- Service worker registration -->
+    <!-- Redirect users to Google Sites version -->
     <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('service-worker.js')
-            .then(reg => console.log('Service Worker registered:', reg))
-            .catch(err => console.error('Service Worker registration failed:', err));
-        });
-      }
+      window.location.replace("https://sites.google.com/view/countryinnsnewforest/home");
     </script>
+
+    <!-- Dark Mode Styles -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #ffffff;
+            color: #000000;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dark-mode {
+            background-color: #121212;
+            color: #ffffff;
+        }
+        #dark-mode-toggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #007bff;
+            color: white;
+            padding: 12px 18px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        /* Floating Install Button */
+        #install-button {
+            position: fixed;
+            bottom: 70px;
+            right: 20px;
+            background: #28a745;
+            color: white;
+            padding: 12px 18px;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            display: none; /* Hidden by default */
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Country Inns App</h1>
     <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
-    <p>If you are not redirected, <a href="https://sites.google.com/view/countryinnsnewforest/home">click here</a>.</p>
+    
+    <!-- If you prefer to embed Google Sites instead of redirecting, uncomment below -->
+    <!-- <iframe src="https://sites.google.com/view/countryinnsnewforest/home" width="100%" height="100%" style="border:none;"></iframe> -->
+
+    <!-- Dark Mode Toggle Button -->
+    <button id="dark-mode-toggle">🌙 Dark Mode</button>
+
+    <!-- Install Button -->
+    <button id="install-button">📲 Install App</button>
+
+    <script>
+        // Dark Mode Toggle
+        document.getElementById("dark-mode-toggle").addEventListener("click", function() {
+            document.body.classList.toggle("dark-mode");
+        });
+
+        // Install Prompt
+        let deferredPrompt;
+        window.addEventListener("beforeinstallprompt", (event) => {
+            event.preventDefault();
+            deferredPrompt = event;
+            document.getElementById("install-button").style.display = "block";
+        });
+
+        document.getElementById("install-button").addEventListener("click", () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    deferredPrompt = null;
+                    document.getElementById("install-button").style.display = "none";
+                });
+            }
+        });
+
+        window.addEventListener("appinstalled", () => {
+            document.getElementById("install-button").style.display = "none";
+        });
+    </script>
 </body>
 </html>
