--- a/index.html
+++ b/index.html
@@ -53,12 +53,21 @@
         #dark-mode-toggle { bottom: 20px; }
         #install-button { bottom: 70px; background: #28a745; display: none; }
         #google-sites-link { bottom: 120px; background: #ff9800; }
+        iframe {
+            width: 100%;
+            height: 90vh;
+            border: none;
+            display: none; /* Initially hidden */
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to Country Inns App</h1>
     <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
-    
+
+    <!-- Google Sites Embed (hidden until installed) -->
+    <iframe id="google-sites-frame" src="https://sites.google.com/view/countryinnsnewforest/home"></iframe>
+
     <a id="google-sites-link" href="https://sites.google.com/view/countryinnsnewforest/home" target="_blank">🌐 Go to Google Sites Version</a>
 
     <!-- Dark Mode Toggle Button -->
@@ -101,6 +110,7 @@
                     document.getElementById("install-button").style.display = "none";
                     localStorage.setItem("app-installed", "true");
                     document.getElementById("google-sites-link").style.display = "none"; // Hide after install
+                    document.getElementById("google-sites-frame").style.display = "block"; // Show iframe
                 });
             }
         });
@@ -109,11 +119,13 @@
             document.getElementById("install-button").style.display = "none";
             localStorage.setItem("app-installed", "true");
             document.getElementById("google-sites-link").style.display = "none"; // Hide Google Sites link
+            document.getElementById("google-sites-frame").style.display = "block"; // Show iframe
         });
 
-        // Hide "Go to Google Sites" after install
+        // Auto-load Google Sites if installed
         if (localStorage.getItem("app-installed") === "true") {
             document.getElementById("google-sites-link").style.display = "none";
+            document.getElementById("google-sites-frame").style.display = "block";
         }
     </script>
 </body>
