--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Link to the manifest.json file -->
     <link rel="manifest" href="manifest.json">
-    
+
     <!-- Set theme color for the address bar on mobile -->
     <meta name="theme-color" content="#000000">
 
@@ -25,10 +25,14 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 50px;
+            padding: 0;
+            margin: 0;
             background-color: #ffffff;
             color: #000000;
             transition: background-color 0.3s, color 0.3s;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
         }
         .dark-mode {
             background-color: #121212;
@@ -36,6 +40,7 @@
         }
         #dark-mode-toggle, #install-button {
             position: fixed;
+            bottom: 20px;
             right: 20px;
             background: #007bff;
             color: white;
@@ -45,18 +50,21 @@
             font-size: 16px;
             font-weight: bold;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            border: none;
-            text-decoration: none;
-            display: block;
-            text-align: center;
         }
-        #dark-mode-toggle { bottom: 20px; }
-        #install-button { bottom: 70px; background: #28a745; display: none; }
+        #install-button {
+            bottom: 70px;
+            background: #28a745;
+            display: none; /* Hidden by default */
+        }
+        iframe {
+            flex-grow: 1;
+            width: 100%;
+            border: none;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to Country Inns App</h1>
-    <p>Stay updated with our events, offers, and more. This is the App for our 7 pubs in the New Forest.</p>
+    <iframe id="content-frame" src="https://sites.google.com/view/countryinnsnewforest/home" width="100%" height="100%"></iframe>
 
     <!-- Dark Mode Toggle Button -->
     <button id="dark-mode-toggle">🌙 Dark Mode</button>
@@ -65,22 +73,16 @@
     <button id="install-button">📲 Install App</button>
 
     <script>
-        // Dark Mode Toggle with Local Storage
-        function applyDarkMode() {
-            if (localStorage.getItem("dark-mode") === "enabled") {
-                document.body.classList.add("dark-mode");
-            }
-        }
-        applyDarkMode();
-        
+        // Dark Mode Toggle
         document.getElementById("dark-mode-toggle").addEventListener("click", function() {
             document.body.classList.toggle("dark-mode");
-            if (document.body.classList.contains("dark-mode")) {
-                localStorage.setItem("dark-mode", "enabled");
-            } else {
-                localStorage.setItem("dark-mode", "disabled");
-            }
+            localStorage.setItem("darkMode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         });
+
+        // Preserve Dark Mode
+        if (localStorage.getItem("darkMode") === "enabled") {
+            document.body.classList.add("dark-mode");
+        }
 
         // Install Prompt
         let deferredPrompt;
@@ -93,25 +95,16 @@
         document.getElementById("install-button").addEventListener("click", () => {
             if (deferredPrompt) {
                 deferredPrompt.prompt();
-                deferredPrompt.userChoice.then(() => {
+                deferredPrompt.userChoice.then((choiceResult) => {
                     deferredPrompt = null;
                     document.getElementById("install-button").style.display = "none";
-                    localStorage.setItem("app-installed", "true");
-                    window.location.replace("https://sites.google.com/view/countryinnsnewforest/home");
                 });
             }
         });
 
         window.addEventListener("appinstalled", () => {
             document.getElementById("install-button").style.display = "none";
-            localStorage.setItem("app-installed", "true");
-            window.location.replace("https://sites.google.com/view/countryinnsnewforest/home");
         });
-
-        // If app is installed, redirect immediately
-        if (localStorage.getItem("app-installed") === "true") {
-            window.location.replace("https://sites.google.com/view/countryinnsnewforest/home");
-        }
     </script>
 </body>
 </html>
