--- a/index.html
+++ b/index.html
@@ -5,72 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Inns App</title>
 
-    <!-- Open Graph tags for Facebook -->
-    <meta property="og:title" content="Country Inns App" />
-    <meta property="og:description" content="Explore all 7 pubs, view menus, book tables, and stay updated on events — all in one place!" />
-    <meta property="og:url" content="https://countryinns.github.io/countryinns-pwa/" />
-    <meta property="og:image" content="https://countryinns.github.io/countryinns-pwa/preview-image.png" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Country Inns" />
-    <meta property="og:locale" content="en_GB" />
-
-    <!-- Link to the manifest.json file -->
+    <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
 
-    <!-- Set theme color for the address bar on mobile -->
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Theme -->
     <meta name="theme-color" content="#000000">
 
-    <!-- Dark Mode Styles -->
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 0;
-            margin: 0;
-            background-color: #ffffff;
-            color: #000000;
-            transition: background-color 0.3s, color 0.3s;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
+            padding: 20px;
+            background-color: white;
+            color: black;
         }
         .dark-mode {
-            background-color: #121212;
-            color: #ffffff;
+            background-color: black;
+            color: white;
         }
-        #dark-mode-toggle, #install-button {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
+        button {
             background: #007bff;
             color: white;
-            padding: 12px 18px;
-            border-radius: 20px;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
-            font-weight: bold;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        #install-button {
-            bottom: 70px;
-            background: #28a745;
-            display: none; /* Hidden by default */
+            margin: 10px;
         }
         iframe {
-            flex-grow: 1;
             width: 100%;
+            height: 80vh;
             border: none;
         }
     </style>
 </head>
 <body>
-    <iframe id="content-frame" src="https://sites.google.com/view/countryinnsnewforest/home" width="100%" height="100%"></iframe>
-
-    <!-- Dark Mode Toggle Button -->
-    <button id="dark-mode-toggle">🌙 Dark Mode</button>
-
-    <!-- Install Button -->
-    <button id="install-button">📲 Install App</button>
+    <h1>Welcome to Country Inns</h1>
+    <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
+    <button id="open-site">🌐 Open Google Sites</button>
+    <button id="install-button" style="display:none;">📲 Install App</button>
 
     <script>
         // Dark Mode Toggle
@@ -83,6 +60,11 @@
         if (localStorage.getItem("darkMode") === "enabled") {
             document.body.classList.add("dark-mode");
         }
+
+        // Open Google Sites in a new tab
+        document.getElementById("open-site").addEventListener("click", function() {
+            window.open("https://sites.google.com/view/countryinnsnewforest/home", "_blank");
+        });
 
         // Install Prompt
         let deferredPrompt;
