--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             document.body.classList.add("dark-mode");
         }
 
-        // Open Google Sites in a new tab
+        // Open Web Version in a new tab
         document.getElementById("open-site").addEventListener("click", function() {
             window.open("https://sites.google.com/view/countryinnsnewforest/home", "_blank");
         });
