--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <h1>Welcome to Country Inns</h1>
     <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
-    <button id="open-site">🌐 Open Google Sites</button>
+    <button id="open-site">🌐 Open Web Version</button>
     <button id="install-button" style="display:none;">📲 Install App</button>
 
     <script>
@@ -72,7 +72,7 @@
             }
         });
 
-        // Open Google Sites
+        // Open Web Version
         document.getElementById("open-site").addEventListener("click", function() {
             window.location.href = "https://sites.google.com/view/countryinnsnewforest/home";
         });
