--- a/index.html
+++ b/index.html
@@ -21,82 +21,67 @@
             padding: 20px;
             background-color: white;
             color: black;
+            transition: opacity 0.5s ease;
         }
         .dark-mode {
             background-color: black;
             color: white;
         }
-        button {
-            background: #007bff;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            margin: 10px;
+        .loading-screen {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.5s ease;
         }
-        iframe {
-            width: 100%;
-            height: 80vh;
-            border: none;
+        .loading-screen.fade-out {
+            opacity: 0;
+            pointer-events: none;
+        }
+        .spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(0,0,0,0.1);
+            border-top: 5px solid #007bff;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to the Country Inns App</h1>
+    <div class="loading-screen" id="loading-screen">
+        <div class="spinner"></div>
+    </div>
+    
+    <h1>Welcome to Country Inns</h1>
     <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
-    <button id="open-site">🌐 Open Web Version</button>
+    <button id="open-site">🌐 Open Google Sites</button>
     <button id="install-button" style="display:none;">📲 Install App</button>
 
     <script>
+        // Loading Screen Fade Out
+        window.addEventListener("load", function() {
+            document.getElementById("loading-screen").classList.add("fade-out");
+        });
+
         // Dark Mode Toggle with Icon Change
         const darkModeToggle = document.getElementById("dark-mode-toggle");
-
-        // Check if the user has a saved preference
         if (localStorage.getItem("dark-mode") === "enabled") {
             document.body.classList.add("dark-mode");
             darkModeToggle.textContent = "☀️ Light Mode";
         }
-
         darkModeToggle.addEventListener("click", function() {
             document.body.classList.toggle("dark-mode");
-
-            // Update button text & save preference
-            if (document.body.classList.contains("dark-mode")) {
-                darkModeToggle.textContent = "☀️ Light Mode";
-                localStorage.setItem("dark-mode", "enabled");
-            } else {
-                darkModeToggle.textContent = "🌙 Dark Mode";
-                localStorage.setItem("dark-mode", "disabled");
-            }
-        });
-
-        // Open Web Version
-        document.getElementById("open-site").addEventListener("click", function() {
-            window.location.href = "https://sites.google.com/view/countryinnsnewforest/home";
-        });
-
-        // Install Prompt
-        let deferredPrompt;
-        window.addEventListener("beforeinstallprompt", (event) => {
-            event.preventDefault();
-            deferredPrompt = event;
-            document.getElementById("install-button").style.display = "block";
-        });
-
-        document.getElementById("install-button").addEventListener("click", () => {
-            if (deferredPrompt) {
-                deferredPrompt.prompt();
-                deferredPrompt.userChoice.then((choiceResult) => {
-                    deferredPrompt = null;
-                    document.getElementById("install-button").style.display = "none";
-                });
-            }
-        });
-
-        window.addEventListener("appinstalled", () => {
-            document.getElementById("install-button").style.display = "none";
+            darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
+            localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         });
     </script>
 </body>
