--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <h1>Welcome to Country Inns</h1>
     <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
-    <button id="open-site">🌐 Open Google Sites</button>
+    <button id="open-site">🌐 Open Web Version</button>
     <button id="install-button" style="display:none;">📲 Install App</button>
 
     <script>
