--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        button {
+            background: #007bff;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin: 10px;
+        }
     </style>
 </head>
 <body>
@@ -82,6 +92,29 @@
             document.body.classList.toggle("dark-mode");
             darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
             localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
+        });
+
+        // Open Web Version Button
+        document.getElementById("open-site").addEventListener("click", function() {
+            window.location.href = "https://sites.google.com/view/countryinns"; // Update with actual Google Sites URL
+        });
+
+        // Install Prompt
+        let deferredPrompt;
+        window.addEventListener("beforeinstallprompt", (event) => {
+            event.preventDefault();
+            deferredPrompt = event;
+            document.getElementById("install-button").style.display = "block";
+        });
+
+        document.getElementById("install-button").addEventListener("click", () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then((choiceResult) => {
+                    deferredPrompt = null;
+                    document.getElementById("install-button").style.display = "none";
+                });
+            }
         });
     </script>
 </body>
