--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
-        button {
-            background: #007bff;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            margin: 10px;
-        }
     </style>
 </head>
 <body>
@@ -94,9 +84,9 @@
             localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         });
 
-        // Open Web Version Button
+        // Open Web Version
         document.getElementById("open-site").addEventListener("click", function() {
-            window.location.href = "https://sites.google.com/view/countryinns"; // Update with actual Google Sites URL
+            window.location.href = "https://sites.google.com/view/countryinns";
         });
 
         // Install Prompt
@@ -106,11 +96,11 @@
             deferredPrompt = event;
             document.getElementById("install-button").style.display = "block";
         });
-
+        
         document.getElementById("install-button").addEventListener("click", () => {
             if (deferredPrompt) {
                 deferredPrompt.prompt();
-                deferredPrompt.userChoice.then((choiceResult) => {
+                deferredPrompt.userChoice.then(() => {
                     deferredPrompt = null;
                     document.getElementById("install-button").style.display = "none";
                 });
