--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         // Open Web Version
         document.getElementById("open-site").addEventListener("click", function() {
-            window.location.href = "https://sites.google.com/view/countryinns";
+            window.open("https://sites.google.com/view/countryinnsnewforest", "_blank");
         });
 
         // Install Prompt
