--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="spinner"></div>
     </div>
     
-    <h1>Welcome to Country Inns</h1>
+    <h1>Welcome to the Country Inns App</h1>
     <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
     <button id="open-site">🌐 Open Web Version</button>
     <button id="install-button" style="display:none;">📲 Install App</button>
