--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Country Inns</title>
+  
+  <!-- 🔗 Favicon -->
+  <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+
+  <!-- 🧭 PWA + styles -->
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="assets/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <header class="app-header">
