--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Country Inns</title>
   
   <!-- 🔗 Favicon -->
-  <link rel="icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 
   <!-- 🧭 PWA + styles -->
   <link rel="manifest" href="manifest.json">
