--- a/index.html
+++ b/index.html
@@ -1,47 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Country Inns</title>
-  
-  <!-- 🔗 Favicon -->
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Country Inns App</title>
 
-  <!-- 🧭 PWA + styles -->
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="assets/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
+
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+    <!-- Theme -->
+    <meta name="theme-color" content="#000000">
+
+    <style>
+        /* Root Variables for Consistency */
+        :root {
+            --primary-color: #007bff;
+            --text-color: #333;
+            --background-light: #ffffff;
+            --background-dark: #121212;
+            --button-bg: var(--primary-color);
+            --button-text: #fff;
+            --transition-speed: 0.3s;
+        }
+
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            padding: 20px;
+            background-color: var(--background-light);
+            color: var(--text-color);
+            transition: background-color var(--transition-speed), color var(--transition-speed);
+        }
+
+        /* Dark Mode */
+        .dark-mode {
+            background-color: var(--background-dark);
+            color: #fff;
+        }
+
+        /* Loading Screen */
+        .loading-screen {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: var(--background-light);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity var(--transition-speed);
+        }
+        .dark-mode .loading-screen {
+            background: var(--background-dark);
+        }
+        .loading-screen.fade-out {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        /* Spinner */
+        .spinner {
+            width: 50px;
+            height: 50px;
+            border: 5px solid rgba(0,0,0,0.1);
+            border-top: 5px solid var(--primary-color);
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Buttons */
+        .button {
+            display: inline-block;
+            padding: 12px 20px;
+            margin: 10px;
+            font-size: 16px;
+            font-weight: bold;
+            color: var(--button-text);
+            background-color: var(--button-bg);
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color var(--transition-speed), transform var(--transition-speed);
+        }
+        .button:hover {
+            background-color: #0056b3;
+            transform: scale(1.05);
+        }
+        .dark-mode .button {
+            background-color: #2196F3;
+        }
+
+        /* Icons */
+        .icon {
+            margin-right: 8px;
+        }
+    </style>
 </head>
-
 <body>
-
-  <header class="app-header">
-    <div class="container">
-      <img src="assets/logo.png" alt="Country Inns Logo" class="logo">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="html-menus/">Menus</a>
-        <a href="proudly-local.html">Proudly Local</a>
-      </nav>
+    <div class="loading-screen" id="loading-screen">
+        <div class="spinner"></div>
     </div>
-  </header>
-
-  <main class="content">
+    
     <h1>Welcome to Country Inns</h1>
-    <p>Explore our menus, discover local partners, and visit our charming countryside pubs.</p>
+    <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
+    <button id="open-site" class="button">🌐 Open Web Version</button>
+    <button id="install-button" class="button" style="display:none;">📲 Install App</button>
 
-    <a href="html-menus/" class="button">View Our Menus</a>
-  </main>
+    <script>
+        const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
-  <footer class="app-footer">
-    <p>&copy; 2025 Country Inns. All rights reserved.</p>
-  </footer>
+        // Redirect if App is Installed
+        if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
+            window.location.href = appURL;
+        }
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
-  </script>
+        // Extend Loading Screen Duration (Fake Splash Screen)
+        window.addEventListener("load", function() {
+            setTimeout(() => {
+                document.getElementById("loading-screen").classList.add("fade-out");
+            }, 2000);
+        });
+
+        // Dark Mode Toggle
+        const darkModeToggle = document.getElementById("dark-mode-toggle");
+        if (localStorage.getItem("dark-mode") === "enabled") {
+            document.body.classList.add("dark-mode");
+            darkModeToggle.textContent = "☀️ Light Mode";
+        }
+        darkModeToggle.addEventListener("click", function() {
+            document.body.classList.toggle("dark-mode");
+            darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
+            localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
+        });
+
+        // Open Web Version
+        document.getElementById("open-site").addEventListener("click", function() {
+            window.location.href = appURL;
+        });
+
+        // Install Prompt
+        let deferredPrompt;
+        window.addEventListener("beforeinstallprompt", (event) => {
+            event.preventDefault();
+            deferredPrompt = event;
+            document.getElementById("install-button").style.display = "block";
+        });
+
+        document.getElementById("install-button").addEventListener("click", () => {
+            if (deferredPrompt) {
+                deferredPrompt.prompt();
+                deferredPrompt.userChoice.then(() => {
+                    deferredPrompt = null;
+                    document.getElementById("install-button").style.display = "none";
+                });
+            }
+        });
+    </script>
 </body>
 </html>
