--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="spinner"></div>
     </div>
     
-    <h1>Welcome to Country Inns</h1>
+    <h1>Welcome to the Country Inns App</h1>
     <button id="dark-mode-toggle" class="button">🌙 Toggle Dark Mode</button>
     <button id="open-site" class="button">🌐 Open Web Version</button>
     <button id="install-button" class="button" style="display:none;">📲 Install App</button>
