--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Country Inns App</title>
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
