--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Country Inns App</title>
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.webmanifest" type="application/manifest+json">
 
     <!-- Favicon -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -19,9 +19,8 @@
 
     <!-- App Styles -->
     <style>
-        /* Root Variables */
         :root {
-            --primary-color: #d4af37; /* gold-like, fits "Country Inns" premium feel */
+            --primary-color: #d4af37;
             --secondary-color: #333;
             --accent-color: #0056b3;
             --background-light: #f9f9f9;
@@ -34,7 +33,6 @@
             --border-radius: 12px;
         }
 
-        /* General Reset */
         * {
             box-sizing: border-box;
             margin: 0;
@@ -61,16 +59,15 @@
             color: var(--primary-color);
         }
 
-        /* Dark Mode */
         .dark-mode {
             background-color: var(--background-dark);
             color: var(--text-dark);
         }
+
         .dark-mode h1 {
             color: var(--primary-color);
         }
 
-        /* Loading Screen */
         .loading-screen {
             position: fixed;
             inset: 0;
@@ -81,15 +78,16 @@
             z-index: 9999;
             transition: opacity var(--transition-speed);
         }
+
         .dark-mode .loading-screen {
             background: var(--background-dark);
         }
+
         .loading-screen.fade-out {
             opacity: 0;
             pointer-events: none;
         }
 
-        /* Spinner */
         .spinner {
             width: 60px;
             height: 60px;
@@ -98,11 +96,11 @@
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
+
         @keyframes spin {
             to { transform: rotate(360deg); }
         }
 
-        /* Buttons */
         .button {
             display: inline-flex;
             align-items: center;
@@ -120,21 +118,21 @@
             transition: background-color var(--transition-speed), transform var(--transition-speed);
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         }
+
         .button:hover {
             background-color: var(--button-hover);
             transform: translateY(-2px);
         }
+
         .dark-mode .button {
             background-color: var(--primary-color);
             color: #121212;
         }
 
-        /* Icon inside Button */
         .button .icon {
             margin-right: 8px;
         }
 
-        /* Responsive */
         @media (max-width: 600px) {
             body {
                 padding: 20px 10px;
@@ -149,7 +147,6 @@
         }
     </style>
 </head>
-
 <body>
     <div class="loading-screen" id="loading-screen">
         <div class="spinner"></div>
@@ -163,36 +160,32 @@
     <script>
         const appURL = "https://sites.google.com/view/countryinnsnewforest";
 
-        // Redirect if App is Installed
         if (window.matchMedia('(display-mode: standalone)').matches || navigator.standalone) {
             window.location.href = appURL;
         }
 
-        // Extend Loading Screen Duration (Fake Splash Screen)
         window.addEventListener("load", function() {
             setTimeout(() => {
                 document.getElementById("loading-screen").classList.add("fade-out");
             }, 2000);
         });
 
-        // Dark Mode Toggle
         const darkModeToggle = document.getElementById("dark-mode-toggle");
         if (localStorage.getItem("dark-mode") === "enabled") {
             document.body.classList.add("dark-mode");
             darkModeToggle.textContent = "☀️ Light Mode";
         }
+
         darkModeToggle.addEventListener("click", function() {
             document.body.classList.toggle("dark-mode");
             darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
             localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
         });
 
-        // Open Web Version
         document.getElementById("open-site").addEventListener("click", function() {
             window.location.href = appURL;
         });
 
-        // Install Prompt
         let deferredPrompt;
         window.addEventListener("beforeinstallprompt", (event) => {
             event.preventDefault();
