--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
             const lat = position.coords.latitude;
             const lon = position.coords.longitude;
             const query = encodeURIComponent(
-              "The Bold Forester" +
-  " OR The Royal Oak Beaulieu" +
+              "The Bold Forester Marchwood" +
+  " OR The Royal Oak Beaulieu Hilltop" +
   " OR The Trusty Servant Inn Minstead" +
   " OR The New Forest Inn Emery Down" +
   " OR The Lamb Inn Nomansland" +
